[project]
name = "yapsm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.4.2",
    "plotnine>=0.14.5",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
]

[dependency-groups]
dev = [
    "ipython>=9.0.2",
    "jupyterlab>=4.3.5",
    "pytest>=8.3.5",
    "ruff>=0.9.10",
    "psmpy>=0.3.13",
]
