[project]
name = "yapsm"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.4.2",
    "ortools>=9.12.4544",
    "plotnine>=0.14.5",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
]

[dependency-groups]
dev = [
    "ipython>=9.0.2",
    "jupyterlab>=4.3.5",
    "pytest>=8.3.5",
    "ruff>=0.9.10",
    "psmpy>=0.3.13",
]


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "*.ipynb"
]
